// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Artifact - For Artifact tests initial render 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.selectAnArtifact
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
  >
    <div
      class="TableV2--table selectArtifactTable"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 5%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactName"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACT
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactRepository"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestLocation"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 13%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactBuildTag"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.BUILDTAGARTIFACTPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestRuntimeInputs"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
              </span>
            </div>
          </p>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cells"
          >
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="justify-content: center;"
              >
                <div>
                  <label
                    class="bp3-label"
                  />
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="artifactLabel"
                      type="radio"
                      value="stagea: Primary"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 176px;"
                >
                  stagea: Primary
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 159px;"
                >
                  Runtime Input
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 13%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 100px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Yes
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-name="selectBtn"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          select
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select Artifact - For Artifact tests on click of apply button 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.configureArtifactRuntimeInputs
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
    style="--showScrollTop: 0; --showScrollBottom: 0;"
  >
    <div
      class="nopadLeft accordionSummary"
      id="Stage.stagea.Service.Artifacts.Sidecars"
    />
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow Button--withLeftIcon Button--variation Button--variation-secondary"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          filters.apply
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select Artifact - For Artifact tests on click of select button 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.selectAnArtifact
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
    style="--showScrollTop: 0; --showScrollBottom: 0;"
  >
    <div
      class="TableV2--table selectArtifactTable"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 5%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactName"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACT
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactRepository"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestLocation"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 13%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactBuildTag"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.BUILDTAGARTIFACTPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestRuntimeInputs"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
              </span>
            </div>
          </p>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cells"
          >
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="justify-content: center;"
              >
                <div>
                  <label
                    class="bp3-label"
                  />
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="artifactLabel"
                      type="radio"
                      value="stagea: Primary"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 176px;"
                >
                  stagea: Primary
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 159px;"
                >
                  Runtime Input
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 13%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 100px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Yes
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-name="selectBtn"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          select
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Select Artifact - For Artifact tests when selected tag is not runtime input 1`] = `
<div
  class="bp3-dialog selectArtifactModal ModalDialog--container"
  style="width: 880px; --ModalDialog-Height: 350px;"
>
  <header
    class="ModalDialog--header"
    data-testid="modaldialog-header"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-variation-h3"
      level="3"
    >
      pipeline.artifactTriggerConfigPanel.selectAnArtifact
    </h3>
  </header>
  <div
    class="ModalDialog--body"
    data-testid="modaldialog-body"
    style="--showScrollTop: 0; --showScrollBottom: 0;"
  >
    <div
      class="TableV2--table selectArtifactTable"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 5%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactName"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACT
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 25%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactRepository"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.ARTIFACTREPOSITORY
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestLocation"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.LOCATIONREPOPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 13%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactBuildTag"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.BUILDTAGARTIFACTPATH
              </span>
            </div>
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 18%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="artifactManifestRuntimeInputs"
            >
              <span
                class="StyledProps--font StyledProps--main textHeading StyledProps--inline"
              >
                PIPELINE.ARTIFACTTRIGGERCONFIGPANEL.HASRUNTIMEINPUTS
              </span>
            </div>
          </p>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cells"
          >
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="justify-content: center;"
              >
                <div>
                  <label
                    class="bp3-label"
                  />
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="artifactLabel"
                      type="radio"
                      value="stagea: Primary"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                  </label>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 176px;"
                >
                  stagea: Primary
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1; width: 159px;"
                >
                  Runtime Input
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 110px;"
                />
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 13%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="min-height: 18px; --text-line-clamp: 1; width: 100px;"
                >
                  test
                </p>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 18%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Yes
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <footer
    class="ModalDialog--footer"
    data-testid="modaldialog-footer"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-name="selectBtn"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          select
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          cancel
        </span>
      </button>
    </div>
  </footer>
  <button
    aria-label="Close"
    class="bp3-button Button--button StyledProps--font StyledProps--main ModalDialog--closeButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-icon"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="Stroke"
    >
      <svg
        fill="none"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 .8l6 6 6-6-12 12 6-6 6 6"
          stroke="#8F90A6"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </button>
</div>
`;
